# attendance-taker

./: .env.example  .gitattributes  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  plan-navbar.md  plan.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_sessions.py  003_remove_email.py  004_classes.py  005_attendance.py  006_cascade_delete_attendance_records.py  007_class_cascade.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  attendance.py  class_.py  school.py  session.py  user.py
backend/app/routers/: __init__.py  attendance.py  auth.py  classes.py
backend/app/schemas/: __init__.py  attendance.py  class_.py  user.py
backend/app/services/: auth.py
backend/tests/: conftest.py  test_attendance.py  test_auth.py  test_classes.py  test_register.py  test_reports.py
frontend/: .env.example  .eslintrc.cjs  .prettierrc.json  Dockerfile  Dockerfile.dev  README.md  eslint.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
plan/: cicd.md  containerize.md  i18n-todo.md  i18n.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  plan.md
scripts/: check-locales.py  check-requirements.py  check-requirements.sh
(+55 files in other folders)
