[tool.poetry]
name = "attendance-backend"
version = "0.1.0"
description = "Backend for attendance-taker web app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
alembic = "^1.12.0"
psycopg2-binary = "^2.9"
pydantic = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.22.1"
black = "^24.10.0"
flake8 = "^7.0.0"
mypy = "^1.5.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
