[tool.poetry]
name = "attendance-backend"
version = "0.1.0"
description = "Backend for attendance-taker web app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = "2.0.23"
alembic = "1.12.1"
psycopg2-binary = "2.9.9"
pydantic = "2.6.1"
pydantic-settings = "2.6.1"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "8.3.0"
pytest-asyncio = "0.26.0"
black = "24.1.1"
flake8 = "7.0.0"
mypy = "1.7.1"
isort = "5.13.2"
# type stubs for mypy
python-dateutil = {version = "2.8.19.14", optional = true}

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
